force-app/main/default/objects/Invoice__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <label>Pay Period</label>
    <type>Date</type>
</CustomField>