force-app/main/default/objects/Invoice__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>